--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "@capacitor/cli": "^7.2.0",
     "@capacitor/core": "^7.2.0",
     "axios": "^1.8.4",
+    "bootstrap": "^5.3.5",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-leaflet-markercluster": "^5.0.0-rc.0"
   },
