--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-leaflet-markercluster": "^5.0.0-rc.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
