--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,14 +17,17 @@
     "@capacitor/core": "^7.2.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-leaflet-markercluster": "^5.0.0-rc.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
