--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,16 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && npx cap sync",
+    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "android": "npx cap add android",
-    "android-open": "npx cap open android"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@capacitor/android": "^7.2.0",
-    "@capacitor/cli": "^7.2.0",
-    "@capacitor/core": "^7.2.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "rc-slider": "^11.1.8",
